@@ -18,7 +18,10 @@ Release 0.23.7 - UNRELEASED
     HADOOP-8157. Fix race condition in Configuration that could cause spurious
     ClassNotFoundExceptions after a GC. (todd)
 
-    HADOOP-7886 Add toString to FileStatus (SreeHari via tgraves)
+    HADOOP-7886. Add toString to FileStatus (SreeHari via tgraves)
+
+    HADOOP-9155. FsPermission should have different default value, 777 for 
+    directory and 666 for file (Binglin Chang via tgraves)
 
 Release 0.23.6 - UNRELEASED
 
